--- a/text/14_Surface_Integrals.tex
+++ b/text/14_Surface_Integrals.tex
@@ -1,20 +1,20 @@
-\section{Surface Integrals}\label{sec:greens_theorem}
+\section{Surface Integrals}\label{sec:surface_integrals}
 
-The double integral in Green's Theorem is over a region $R$ in the plane.  In this section we consider instead a curved surface $S$ in three-dimensional space, such as part of a sphere or of a cone. When the $z$ is a function of $x$ and $y$, it can be written $z = f(x,y)$, and the graph is a surface, analogous to how $y = f(x)$ was the graph of a particular type of curve.  In more general cases, a curve could be written parametrically, $x = x(t)$ and $y = y(t)$, as functions of a parameter $t$.  Similarly, a surface can be written parametrically as functions of two parameters.\\
+The double integral in Green's Theorem is over a region $R$ in the plane.  In this section we consider instead a curved surface $T$ in three-dimensional space, such as part of a sphere or of a cone. When the $z$ is a function of $x$ and $y$, it can be written $z = f(x,y)$, and the graph is a surface, analogous to how $y = f(x)$ was the graph of a particular type of curve.  In more general cases, a curve could be written parametrically, $x = x(t)$ and $y = y(t)$, as functions of a parameter $t$.  Similarly, a surface can be written parametrically as functions of two parameters.\\
 
-When we compute the length of a curve, we had an integral $\int_C \: ds$, a line integral.  Similarly, when we compute the area of a given surface $S$, we will evaluate an integral $\iint_S \: dS$, called a surface integral. This type of integral will can be used to compute surface area even when the surface is not the result of a curve being revolved around an axis, as in Sections \ref{sec:arc_length} and \ref{sec:par_calc}, or when the surface is not a function $z = f(x,y)$. \\
+When we compute the length of a curve, we had an integral $\int_C \: ds$, a line integral.  Similarly, when we compute the area of a given surface $T$, we will evaluate an integral $\iint_T \: dS$, called a surface integral. This type of integral will be used to compute surface area even when the surface is not given by a function $z = f(x,y)$ of two variables. \\
 
-We first start with a review of the case of a surface $S$ given by $z = f(x,y)$ for $(x,y)$ in a region $R$ of the $xy$-plane, as in Section \ref{sec:surface_area}.  When we partitioned the region $R$ into small pieces, such as rectangles, the associated pieces of the surface $z = f(x,y)$ will be almost flat, like small parallelograms. The surface area of such a piece ended up being
-$$dS = \sqrt{1 + 1+f_x(x,y)^2+f_y(x,y)^2} \: dx \: dy$$
-computed using a cross product of the vectors making up the sides of the parallelogram. The total surface area of $S$ could then be computed as
-$$S = \iint_R \: dS = \iint_R \sqrt{1 + 1+f_x(x,y)^2+f_y(x,y)^2} \: dA.$$
-We now generalize this method to the situation that the surface $S$ is given parametrically.\\
+We first start with a review of the case of a surface $T$ given by $z = f(x,y)$ for $(x,y)$ in a region $R$ of the $xy$-plane, as in Section \ref{sec:surface_area}.  When we partitioned the region $R$ into small rectangular pieces, the associated pieces of the surface $z = f(x,y)$ will be almost flat, like small parallelograms. The surface area of such a piece ended up being
+$$dS = \sqrt{1 + f_x(x,y)^2+f_y(x,y)^2} \: dx \: dy$$
+computed using a cross product of the vectors making up the sides of the parallelogram. The total surface area of $T$ could then be computed as
+$$S = \iint_R \: dS = \iint_R \sqrt{1 + f_x(x,y)^2+f_y(x,y)^2} \: dA.$$
+We now generalize this method to the situation that the surface $T$ is given parametrically.\\
 
 \noindent\textbf{\large Parametric Surfaces and Surface Area}\\
 
 A \textbf{parametric surface} is one defined by three functions of two parameters, which we will denote by $u$ and $v$.  We will write these functions as $x = x(u,v)$, $y = y(u,v)$, and $z = z(u,v)$, where $(u,v)$ come from a region $R$ in the $uv$-plane.  Points in the $uv$-plane are mapped to three-dimensional points $(x,y,z)$ in three-space.\\
 
-\example{ex_surface_int01}{}{Determine a parametric representation for a cylindrical surface of height $8$ and radius $2$.}{Using cylindrical coordinates, we know that
+\example{ex_surface_int01}{}{Determine a parametric representation for a cylindrical surface $$x^2 + y^2 = 4$$ between $z = 0$ and $z = 8$.}{Using cylindrical coordinates, we know that
 $$x = 2 \cos \theta \: \text{ and } \: y = 2 \sin \theta$$
 and so we can use $u = \theta$ and $v = z$ as our two parameters. This results in parametric equations
 $$x(u,v) = 2 \cos u, \: y(u,v) = 2 \sin u, \: z(u,v) = v$$
@@ -24,7 +24,7 @@ in the region described by $0 \leq u \leq 2\pi$ and $0 \leq v \leq 8$.  So a rec
 \example{ex_surface_int02}{}{Determine a parametric representation for the sphere $x^2 + y^2 + z^2 = a^2$, where $a$ is a constant.}{Now using spherical coordinates, we know that
 $$x = a \sin\phi \cos\theta, \: y = a \sin\phi \sin\theta, \: z = a \cos\phi$$
 and so we can use $u = \phi$ and $v = \theta$ as our two parameters. This results in parametric equations
-$$x(u,v) = a \sin u \cos u, \: y(u,v) = a \sin u \sin v, \: z(u,v) = a \cos u$$
+$$x(u,v) = a \sin u \cos v, \: y(u,v) = a \sin u \sin v, \: z(u,v) = a \cos u$$
 for $(u,v)$ in the rectangular region $R$ in the $uv$-plane given by $0 \leq u \leq \pi$ and $0 \leq v \leq 2\pi$. 
 }\\
 
@@ -33,36 +33,39 @@ $$x(u,v) = u, \: y(u,v) = v, \: z = f(u,v)$$
 gives the parametric equations for the surface. The region $R$ in the $xy$-plane will be the same as the region $R$ in the $uv$-plane in this case.
 }\\
 
-Now we find $dS$ for a surface $S$ given parametrically by equations
+Now we find $dS$ for a surface $T$ given parametrically by equations
 $$x = x(u,v), \: y = y(u,v), \: z = z(u,v)$$
 for $(u,v)$ in a region $R$, following the same idea as before.  Small increments $du$ and $dv$ in the parameters will result in small parallelogram pieces of the surface of area $dS$.  One side of the parallelogram comes from $du$ while the other comes from $dv$.  The two sides are given by vectors $\vec a \: du$ and $\vec b \: dv$ where
 $$\vec a = \dfrac{\partial x}{\partial u} \vec i + \dfrac{\partial y}{\partial u} \vec j + \dfrac{\partial z}{\partial u} \vec k \: \text{ and } \: \vec a = \dfrac{\partial x}{\partial v} \vec i + \dfrac{\partial y}{\partial v} \vec j + \dfrac{\partial z}{\partial v} \vec k.$$
 To find the area of the parallelogram piece, we take the norm of the cross product, so
-$$dS = \left| \vec a \times \vec b \right| \: du \: dv$$
-and we integrate this over $R$ to get the total surface area. To simplify the notation, let us write
-$$\vec r(u,v) = x(u,v) \vec i + y(u,v) \vec j + z(u,v) \vec k.$$
-Then $\vec a = \vec r_u(u,v)$ and $\vec b = \vec r_v(u,v)$ as above.  So $dS$ can now be written as
+$$dS = \left| \vec a \times \vec b \right| \: du \: dv,$$
+and we integrate this over $R$ to get the total surface area. To clarify the notation, let us write
+$$\vec r(u,v) = x(u,v) \vec i + y(u,v) \vec j + z(u,v) \vec k ,$$
+a vector function describing the surface. Then 
+$$\vec a = \vec r_u(u,v) \: \text{ and } \: \vec b = \vec r_v(u,v)$$
+as above.  So $dS$ can now be written as
 $$dS = \left| \vec r_u \times \vec r_v \right| \: du \: dv$$ and the total surface area is
 $$S = \iint_R \left| \vec r_u \times \vec r_v \right| \: du \: dv.$$\\
 
 \example{ex_surface_int04}{}{Use the above method to compute the surface area of the cone $z = \sqrt{x^2 + y^2}$ up to a height of $4$.}{Using $R$ for the circular region below the cone, the standard parametrization is
 $$x = u, \: y = v, \: z = \sqrt{u^2 + v^2}$$
-for $(u,v)$ in $R$, as above for a surface given by a function of two variables.  We compute $\vec r_u$, $\vec r_v$ and $\vec r_u \times \vec r_v$ first, using $\vec r = u \vec i + v \vec j + \sqrt{u^2 + v^2} \vec k.$ We have
+for $(u,v)$ in $R$, as above for a surface given by a function of two variables.  We compute $\vec r_u$, $\vec r_v$ and $\vec r_u \times \vec r_v$ first, using 
+$$\vec r = u \: \vec i + v \: \vec j + \sqrt{u^2 + v^2} \: \vec k.$$ We have
 $$\vec r_u = \vec i + \dfrac{u}{\sqrt{u^2 + v^2}} \vec k \: \text{ and } \: \vec r_v = \vec j + \dfrac{v}{\sqrt{u^2 + v^2}} \vec k$$
 and so
 $$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ 1 & 0 & \frac{u}{\sqrt{u^2 + v^2}} \\ 0 & 1 & \frac{v}{\sqrt{u^2 + v^2}} \end{array} \right| = -\dfrac{v}{\sqrt{u^2 + v^2}} \vec i - \dfrac{u}{\sqrt{u^2 + v^2}} \vec j + \vec k.$$
-So the norm $\left| \vec r_u \times \vec r_v \right|$ becomes
+The norm $\left| \vec r_u \times \vec r_v \right|$ becomes
 $$\left| \vec r_u \times \vec r_v \right| = \sqrt{1 + \dfrac{u^2}{u^2 + v^2} + \dfrac{v^2}{u^2 + v^2}} = \sqrt{2}.$$
 Therefore the surface area is 
 $$S = \iint_R \sqrt{2} \: du \: dv = 16\sqrt{2} \pi$$
-square units, since the region $R$ is a circle of radius 4. Notice that $\left| \vec r_u \times \vec r_v \right|$ is the same as $\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}$ as we would have obtained using the method from Section \ref{sec:surface_area}.
+square units, since the region $R$ is a circle of radius 4. Notice that $\left| \vec r_u \times \vec r_v \right|$ is the same as $\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}$ using $x$ and $y$ instead of $u$ and $v$, as we would have obtained using the method from Section \ref{sec:surface_area}.
 }\\
 
 \example{ex_surface_int05}{}{Determine the surface area of the helicoid (a spiral ramp) given parametrically by
-$$\vec r(u,v) = u \cos v \vec i + u \sin v \vec j + v \vec k$$ for $0 \leq u \leq 1$ and $0 \leq v \leq 4\pi$.}{Notice that we will be integrating over a rectangle in the $uv$-plane. We can immediately calculate $\vec r_u$ and $\vec r_v$ as
-$$\vec r_u = \cos v \vec i + \sin v \vec j \: \text{ and } \vec r_v = -u \sin v \vec i + u \cos v \vec j + \vec k$$
+$$\vec r(u,v) = u \cos(v) \: \vec i + u \sin(v) \: \vec j + v \: \vec k$$ for $0 \leq u \leq 1$ and $0 \leq v \leq 4\pi$.}{Notice that we will be integrating over a rectangle in the $uv$-plane. We can immediately calculate $\vec r_u$ and $\vec r_v$ as
+$$\vec r_u = \cos(v) \: \vec i + \sin(v) \: \vec j \: \text{ and } \vec r_v = -u \sin(v) \: \vec i + u \cos(v) \: \vec j + \vec k$$
 and so
-$$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ \cos v & \sin v & 0 \\ -u \sin v & u \cos v & 1 \end{array} \right| = \sin v \vec i - \cos v \vec j + u \vec k.$$
+$$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ \cos v & \sin v & 0 \\ -u \sin(v) & u \cos(v) & 1 \end{array} \right| = \sin(v) \: \vec i - \cos(v) \: \vec j + u \: \vec k.$$
 Therefore the norm of this cross product is
 $$\left| \vec r_u \times \vec r_v \right| = \sqrt{\sin^2 v + \cos^2 v + u^2} = \sqrt{u^2 + 1}.$$
 Integrating over the rectangle in the $uv$-plane gives us the surface area
@@ -72,25 +75,30 @@ which evaluates to $2\pi \left( \sqrt{2} + \ln(1 + \sqrt{2}) \right)$ square uni
 
 \noindent\textbf{\large Vector Fields and Flux}\\
 
-Given a parametrized surface $S$ over a region $R$ in the $uv$-plane, we have computed the surface area of $S$ as $\iint_S \: dS = \iint_R 1 \: dS$.  An integral of the form $\iint_S f(x,y,z) \: dS$ is called the \textbf{surface integral} of $f(x,y,z)$ over the surface $S$. To evaluate such a surface integral, one would translate $f(x,y,z)$ to a function of $u$ and $v$ by using the parametric equation $x = x(u,v)$, $y = y(u,v)$, and $z = z(u,v)$ for the given surface.  Then multiply this expression by $dS = \left| \vec r_u \times \vec r_v \right| \: du \: dv$ and integrate over the region $R$ in the $uv$-plane to obtain
-$$\iint_S f(x,y,z) \: dS = \iint_R f(x(u,v), y(u,v), z(u,v)) \: \left| \vec r_u \times \vec r_v \right| \: du \: dv.$$ \\
+Given a parametrized surface $T$ over a region $R$ in the $uv$-plane, we have computed the surface area of $T$ as $\iint_T 1 \: dS$.  Replacing $1$ with any function of three variables, an integral of the form $\iint_T f(x,y,z) \: dS$ is called the \emph{surface integral} of $f(x,y,z)$ over the surface $T$. To evaluate such a surface integral, one would translate $f(x,y,z)$ to a function of $u$ and $v$ by using the parametric equation $x = x(u,v)$, $y = y(u,v)$, and $z = z(u,v)$ for the given surface.  Then multiply this expression by $dS = \left| \vec r_u \times \vec r_v \right| \: du \: dv$ and integrate over the region $R$ in the $uv$-plane to obtain the surface integral.\\
 
-\example{ex_surface_int06}{}{Compute the surface integral of $f(x,y,z) = xyz$ over that part of the cylinder $x^2 + y^2 = 1$ above the first quadrant in the $xy$-plane between $z = 0$ and $z = 2$.}{We first need to parametrize the cylinder as we did earlier, to obtain
-$$\vec r(u,v) = \cos u \vec i + \sin u \vec j + v \vec k$$
-for $0 \leq u \leq \frac{\pi}{2}$ and $0 \leq v \leq 2$. Next, we compute $dS$ as before, using
-$$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ -\sin u & \cos u & 0 \\ 0 & 0 & 1 \end{array} \right| = \cos u \vec i + \sin u \vec j$$
-This gives
-$$\left| \vec r_u \times \vec r_v \right| = \sqrt{\sin^2 u + \cos^2 u +0} = \sqrt{1} = 1$$
-for our surface. Now to integrate $f(x,y,z)$ over $S$, we change $f$ into a function of $u$ and $v$ by writing
-$$f(x,y,z) = xyz = \cos u  \: \sin u \: v$$
-as in our parametrization.  Therefore the surface integral equals
-$$\iint_S f(x,y,z) \: dS = \int_0^{2} \int_{0}^{\pi/2} \cos u \: \sin u \: v \: du \: dv = \left( \dfrac{1}{2}v^2 \right]_0^2 \left( \dfrac{1}{2}\sin^2 u \right]_0^{\pi/2} = 1.$$
+\definition{def:surface_integral}{Surface Integral}{Let $T$ be a surface defined by
+$$\vec r(u,v) = x(u,v) \: \vec i + y(u,v) \: \vec j + z(u,v) \: \vec k$$
+for $(u,v)$ in a region $R$ of the $uv$-plane.  The \textbf{surface integral} of a function $f(x,y,z)$ over $T$ is 
+$$\iint_T f(x,y,z) \: dS = \iint_R f(x(u,v), y(u,v), z(u,v)) \: \left| \vec r_u \times \vec r_v \right| \: du \: dv.$$
 }\\
 
-An example of an application of a surface integral is in computing the flow or flux of a vector field across a given surface, which we discuss next.  Similarly as before, we will first address the case when the surface can be written in the form $z = f(x,y)$.\\
+\example{ex_surface_int06}{}{Compute the surface integral of $f(x,y,z) = xyz$ over that part of the cylinder $x^2 + y^2 = 1$ above the first quadrant in the $xy$-plane and between $z = 0$ and $z = 2$.}{We first need to parametrize the cylinder as we did earlier, to obtain
+$$\vec r(u,v) = \cos(u) \: \vec i + \sin(u) \: \vec j + v \: \vec k$$
+for $0 \leq u \leq \frac{\pi}{2}$ and $0 \leq v \leq 2$. Next, we compute $dS$ as before, using
+$$\vec r_u \times \vec r_v = \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\ -\sin(u) & \cos(u) & 0 \\ 0 & 0 & 1 \end{array} \right| = \cos(u) \: \vec i + \sin(u) \: \vec j$$
+This gives
+$$\left| \vec r_u \times \vec r_v \right| = \sqrt{\sin^2(u) + \cos^2(u) +0} = \sqrt{1} = 1$$
+for our surface. Now to integrate $f(x,y,z)$ over $T$, we change $f$ into a function of $u$ and $v$ by writing
+$$f(x,y,z) = xyz = \cos(u)  \: \sin(u) \: v$$
+as in our parametrization.  Therefore the surface integral equals
+$$\iint_T f(x,y,z) \: dS = \int_0^{2} \int_{0}^{\pi/2} \cos(u) \: \sin(u) \: v \: du \: dv = \left( \dfrac{1}{2}v^2 \right]_0^2 \left( \dfrac{1}{2}\sin^2(u) \right]_0^{\pi/2} = 1.$$
+}\\
 
-\definition{defn_flux}{Flux}{Let $z = f(x,y)$ define a surface $S$ for $(x,y)$ in a region $R$ in the $xy$-plane, and let $$\vec F(x,y,z) = M(x,y,z) \vec i + N(x,y,z) \vec j + P(x,y,z) \vec k$$ be a vector field. The \textbf{flux} of $\vec F$ across $S$ is  
-$$\iint_S \vec F \cdot \vec n \: dS = \iint_R -M \dfrac{\partial f}{\partial x} - N\dfrac{\partial f}{\partial y} + P \: dx \: dy$$
+A key example of an application of a surface integral is in computing the flow or \emph{flux} of a vector field across a given surface, which we discuss next.  As before, we will first address the case when the surface can be written in the form $z = f(x,y)$.\\
+
+\definition{defn_flux}{Flux}{Let $z = f(x,y)$ define a surface $T$ for $(x,y)$ in a region $R$ in the $xy$-plane, and let $$\vec F(x,y,z) = M(x,y,z) \vec i + N(x,y,z) \vec j + P(x,y,z) \vec k$$ be a vector field. The \textbf{flux} of $\vec F$ across $T$ is the surface integral
+$$\iint_T \vec F \cdot \vec n \: dS = \iint_R -M \: f_x(x,y) - N \: f_y(x,y) + P \: dx \: dy$$
 where $\vec n$ is the unit normal vector to the surface. 
 }
 
@@ -101,33 +109,33 @@ $$\vec n = \dfrac{\vec N}{|\vec N|} = \dfrac{\vec N}{\sqrt{1 + f_x(x,y)^2 + f_y(
 Notice that the expression representing $| \vec N |$ is exactly the same as in $dS$, so these will cancel to obtain the right-most definition above. That is,
 \begin{eqnarray*}
 \vec F \cdot \vec n \: dS & = & \dfrac{\vec F \cdot \vec N}{\sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2}} \sqrt{1 + f_x(x,y)^2 + f_y(x,y)^2} \: dx \: dy \\
-& = & -M \dfrac{\partial f}{\partial x} - N\dfrac{\partial f}{\partial y} + P \: dx \: dy.
+& = & -M \: f_x(x,y) - N \: f_y(x,y) + P \: \: dx \: dy.
 \end{eqnarray*}\\
 
 It is worth noting that we are only considering \emph{orientable} surfaces here, which are surfaces with two sides. In the case of a sphere, for example, there is a normal vector pointing inward and another pointing outward. For a closed surface such as a sphere it is conventional to take the normal vector pointing outward for $\vec n$. That is, we adopt the convention that outward flux is positive. A surface such as a M\"obius strip would not be orientable since it has only one side; a pencil traced along one side around the surface will eventually arrive back at its starting position.\\
 
-\example{ex_surface_int07}{}{Let $\vec F(x,y,z) = x \vec i + y \vec j + z \vec k$ and consider the conical surface $S$ given by $z = f(x,y) = \sqrt{x^2 + y^2}$ for $(x,y)$ within the disk $R$ given by $x^2 + y^2 \leq 4$. Compute the flux of $\vec F$ across this surface.}{As for the above definition, we have $M = x$, $N = y$, and $P = z$.  We also have
+\example{ex_surface_int07}{}{Let $\vec F(x,y,z) = x \: \vec i + y \: \vec j + z \: \vec k$ and consider the conical surface $T$ given by $z = f(x,y) = \sqrt{x^2 + y^2}$ for $(x,y)$ within the disk $R$ given by $x^2 + y^2 \leq 4$. Compute the flux of $\vec F$ across this surface.}{For the above definition, we have $M = x$, $N = y$, and $P = z$.  We also have
 $$f_x(x,y) = \dfrac{x}{\sqrt{x^2 + y^2}} \: \text{ and } \: f_y(x,y) = \dfrac{y}{\sqrt{x^2 + y^2}}$$
-as previously.  Therefore the flux across $S$ is
-$$\iint_S \vec F \cdot \vec n \: dS = \iint_R -\dfrac{x^2}{\sqrt{x^2 + y^2}} - f_y(x,y) = \dfrac{y^2}{\sqrt{x^2 + y^2}} + \sqrt{x^2 + y^2} \: dx \: dy$$
-since $z = \sqrt{x^2 + y^2}$.  Notice that the integrand simplifies to zero, and so the flux across $S$ is equal to zero.  This makes sense since the vector field $\vec F$ goes straight out from the origin, which is along the conical surface.  Therefore there is no flow across $S$ because $\vec F \cdot \vec n = 0$. 
+as previously.  Therefore the flux across $T$ is
+$$\iint_T \vec F \cdot \vec n \: dS = \iint_R -\dfrac{x^2}{\sqrt{x^2 + y^2}} - \dfrac{y^2}{\sqrt{x^2 + y^2}} + \sqrt{x^2 + y^2} \: dx \: dy$$
+since $P = z = \sqrt{x^2 + y^2}$.  Notice that the integrand simplifies to zero, and so the flux across $T$ is equal to zero.  This makes sense since the vector field $\vec F$ goes straight out from the origin, which is along the conical surface, not across it.  That is, there is no flow across $T$ because $\vec F \cdot \vec n = 0$. 
 }\\
 
-Next we address the case when the surface $S$ is given parametrically by a function $\vec r(u,v)$ of two parameters $u$ and $v$ from a region $R$ in the $uv$-plane. For surfaces that fold and twist, the formulas can look more complicated, but often the calculations are simpler. Recall that a small parallelogram piece of the surface $S$ will have area $\left| \vec r_u \times \vec r_v \right| \: du \: dv$.  The vectors $\vec r_u$ and $\vec r_v$ are tangent to the surface along the sides.\\
+Next we address the case when the surface $T$ is given parametrically by a function $\vec r(u,v)$ of two parameters $u$ and $v$ from a region $R$ in the $uv$-plane. For surfaces that fold and twist, the formulas can look more complicated, but often the calculations are simpler. Recall that a small parallelogram piece of the surface $T$ will have area $\left| \vec r_u \times \vec r_v \right| \: du \: dv$.  The vectors $\vec r_u$ and $\vec r_v$ are tangent to the surface along the sides.\\
 
-We now put the cross product to another use, because $\vec F \cdot \vec n \: dS$ involves not only area but \emph{direction} as well. We need the unit vector $\vec n$ to know how much flow goes through.  Since $$\vec n = \frac{\vec N}{| \vec N |} \: \text{ and } \: dS = | \vec N | \: du \: dv,$$ the square root cancels out in $\vec n \: dS$.  This leave the following formula for the flux of a vector field across the surface $S$.\\
+We now put the cross product to another use, because $\vec F \cdot \vec n \: dS$ involves not only area but \emph{direction} as well. We need the unit vector $\vec n$ to know how much flow goes through, since $\vec r_u \times \vec r_v$ is perpendicular to the surface.  Also since $\vec n = \frac{\vec N}{| \vec N |}$ we get $$dS = | \vec N | \: du \: dv,$$ as the square root cancels out in $\vec n \: dS$.  This leave the following formula for the flux of a vector field across the surface $T$.\\
 
-\definition{defn_flux_2}{Flux}{Let $\vec r(u,v)$ define a surface $S$ for $(u,v)$ in a region $R$ in the $uv$-plane, and let $$\vec F(x,y,z) = M(x,y,z) \vec i + N(x,y,z) \vec j + P(x,y,z) \vec k$$ be a vector field. The \textbf{flux} of $\vec F$ across $S$ is  
-$$\iint_S \vec F \cdot \vec n \: dS = \iint_S \vec F \cdot \vec N \: du \: dv = \iint_R \vec F \cdot \left( \vec r_u \times \vec r_v \right) \: du \: dv$$
-where $N = \vec r_u \times \vec r_v$ is normal to the surface.
+\definition{defn_flux_2}{Flux}{Let $\vec r(u,v)$ define a surface $T$ for $(u,v)$ in a region $R$ in the $uv$-plane, and let $$\vec F(x,y,z) = M(x,y,z) \vec i + N(x,y,z) \vec j + P(x,y,z) \vec k$$ be a vector field. The \textbf{flux} of $\vec F$ across $T$ is  
+$$\iint_T \vec F \cdot \vec n \: dS = \iint_R \vec F \cdot \left( \vec r_u \times \vec r_v \right) \: du \: dv$$
+where $\vec r_u \times \vec r_v$ is normal to the surface.
 }
 
-\example{ex_surface_int08}{}{Let $\vec F(x,y,z) = \vec k$ and consider the spherical surface $S$ given by $x^2 + y^2 + z^2 = 9$. Compute the flux of $\vec F$ across the top half of the surface $S$.}{Using spherical coordinates and parameters $u = \phi$ and $v = \theta$, we have
-$$\vec r(u,v) = 3 \sin(u) \cos(v) \vec i + 3 \sin(u) \sin(v) \vec j + 3 \cos(u) \vec k$$
+\example{ex_surface_int08}{}{Let $\vec F(x,y,z) = \vec k$ and consider the spherical surface $T$ given by $x^2 + y^2 + z^2 = 9$. Compute the flux of $\vec F$ across the top half of the surface $T$.}{Using spherical coordinates and parameters $u = \phi$ and $v = \theta$, we have
+$$\vec r(u,v) = 3 \sin(u) \cos(v) \: \vec i + 3 \sin(u) \sin(v) \: \vec j + 3 \cos(u) \: \vec k$$
 and so
 \begin{eqnarray*}
 \vec N = \vec r_u \times \vec r_v & = & \left| \begin{array}{ccc} \vec i & \vec j & \vec k \\  3 \cos(u) \cos(v) & 3 \cos(u) \sin(v) & -3\sin(u) \\ -3 \sin(u) \sin(v) & 3 \sin(u) \cos(v) & 0 \end{array} \right| \\
- & = & 9 \left( \sin^2(u) \cos(v) \vec i + \sin^2(u) \sin(v) \vec j + \cos(u) \sin(u) \vec k \right).
+ & = & 9 \left( \sin^2(u) \cos(v) \: \vec i + \sin^2(u) \sin(v) \: \vec j + \cos(u) \sin(u) \: \vec k \right).
 \end{eqnarray*}
 Taking the dot product with $\vec F = \vec k$ we get
 $$\vec F \cdot \vec N = 9 \cos(u) \sin(u).$$
@@ -136,5 +144,6 @@ $$\int_0^{2\pi} \int_0^{\pi/2} 9 \cos(u) \sin(u) \: du \: dv = 18 \pi \left( \df
 across the hemisphere.
 }\\
  
+We will see another generalization of Green's Theorem in the next section, called the Divergence Theorem, where we look at flux across closed surfaces.
 
 \printexercises{exercises/14_04_exercises}
